--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,7 @@
 include(GoogleTest)
-set(TEST_FILES my_test_src.cpp)
+file(GLOB TEST_FILES
+  "${CMAKE_SOURCE_DIR}/test/*.h"
+  "${CMAKE_SOURCE_DIR}/test/*.cpp"
+)
 add_executable(correrTests ${TEST_FILES})
 target_link_libraries(correrTests dc-tp-base gtest_main gtest)
